Enhanced WhatsApp messaging with detailed prefilled templates
- Added comprehensive sendQuickReply function with detailed message templates for:
  • Order a Cake: Complete order form with event details, contact info, and requirements
  • Check Pricing: Detailed pricing inquiry with product specifications and timeline
  • Custom Design: Full consultation request with design requirements and project details
- Created generateOrderMessage function for detailed product-specific order messages
- Updated floating chat widget quick reply buttons to use new detailed templates
- Enhanced 'Continue on WhatsApp' buttons with context-specific detailed messages
- Updated sample order buttons in menu.html to use new detailed message system
- All WhatsApp messages now include structured forms for customers to fill out
- Messages include emojis, clear sections, and professional formatting for better user experience

--- a/gallery.html
+++ b/gallery.html
@@ -504,13 +504,13 @@
                     <span class="message-time">Just now</span>
                 </div>
                 <div class="quick-replies">
-                    <button onclick="sendQuickReply('I want to order a cake')">🎂 Order a Cake</button>
-                    <button onclick="sendQuickReply('Check pricing')">💰 Check Pricing</button>
-                    <button onclick="sendQuickReply('Custom design')">🎨 Custom Design</button>
+                    <button onclick="sendQuickReply('order_cake')">🎂 Order a Cake</button>
+                    <button onclick="sendQuickReply('check_pricing')">💰 Check Pricing</button>
+                    <button onclick="sendQuickReply('custom_design')">🎨 Custom Design</button>
                 </div>
             </div>
             <div class="chat-footer">
-                <a href="https://wa.me/254704939844?text=Hi! I'm interested in your cakes" class="chat-whatsapp-btn">
+                <a href="https://wa.me/254704939844?text=👋 Hello Sweet n' Puffy!%0A%0AI was browsing your beautiful gallery and I'm impressed with your work! I'd like to discuss:%0A%0A🎂 Placing an order for a similar cake design%0A💡 Custom design possibilities%0A💰 Pricing for the items I saw%0A📅 Availability for my event%0A%0ACould we discuss my requirements? Thank you! 🙏" class="chat-whatsapp-btn">
                     <i class="fab fa-whatsapp"></i>
                     Continue on WhatsApp
                 </a>
