--- a/index.html
+++ b/index.html
@@ -109,28 +109,28 @@
             </div>
             <div class="preview-grid">
                 <div class="preview-item">
-                    <img src="assets/images/sample1.png" alt="Wedding Cake" loading="lazy">
+                    <img src="assets/images/wedding cake sample.png" alt="Wedding Cake" loading="lazy">
                     <div class="preview-overlay">
                         <h3>Wedding Cakes</h3>
                         <p>Elegant multi-tier designs</p>
                     </div>
                 </div>
                 <div class="preview-item">
-                    <img src="assets/images/sample2.png" alt="Birthday Cake" loading="lazy">
+                    <img src="assets/images/sample6.png" alt="Birthday Cake" loading="lazy">
                     <div class="preview-overlay">
                         <h3>Birthday Cakes</h3>
                         <p>Custom celebration cakes</p>
                     </div>
                 </div>
                 <div class="preview-item">
-                    <img src="assets/images/sample3.png" alt="Pastries" loading="lazy">
+                    <img src="assets/images/sample1.png" alt="Pastries" loading="lazy">
                     <div class="preview-overlay">
                         <h3>Fresh Pastries</h3>
                         <p>Daily baked delights</p>
                     </div>
                 </div>
                 <div class="preview-item">
-                    <img src="assets/images/sample4.png" alt="Cupcakes" loading="lazy">
+                    <img src="assets/images/cupcakes sample.png" alt="Cupcakes" loading="lazy">
                     <div class="preview-overlay">
                         <h3>Gourmet Cupcakes</h3>
                         <p>Perfect individual treats</p>
@@ -144,7 +144,7 @@
                     </div>
                 </div>
                 <div class="preview-item">
-                    <img src="assets/images/sample6.png" alt="Danish Pastries" loading="lazy">
+                    <img src="assets/images/artisan pastries.png" alt="Danish Pastries" loading="lazy">
                     <div class="preview-overlay">
                         <h3>Artisan Pastries</h3>
                         <p>European-style delicacies</p>
@@ -504,13 +504,13 @@
                     <span class="message-time">Just now</span>
                 </div>
                 <div class="quick-replies">
-                    <button onclick="sendQuickReply('I want to order a cake')">🎂 Order a Cake</button>
-                    <button onclick="sendQuickReply('Check pricing')">💰 Check Pricing</button>
-                    <button onclick="sendQuickReply('Custom design')">🎨 Custom Design</button>
+                    <button onclick="sendQuickReply('order_cake')">🎂 Order a Cake</button>
+                    <button onclick="sendQuickReply('check_pricing')">💰 Check Pricing</button>
+                    <button onclick="sendQuickReply('custom_design')">🎨 Custom Design</button>
                 </div>
             </div>
             <div class="chat-footer">
-                <a href="https://wa.me/254704939844?text=Hi! I'm interested in your cakes" class="chat-whatsapp-btn">
+                <a href="https://wa.me/254704939844?text=👋 Hello Sweet n' Puffy!%0A%0AI'm interested in your bakery services and found your website. I'd like to learn more about:%0A%0A🍰 Your available cakes and pastries%0A💰 Pricing and packages%0A📅 Ordering process and lead times%0A🚚 Delivery options to my area%0A%0ACould you please help me with information about your services? Thank you! 🙏" class="chat-whatsapp-btn">
                     <i class="fab fa-whatsapp"></i>
                     Continue on WhatsApp
                 </a>
