--- a/menu.html
+++ b/menu.html
@@ -71,7 +71,7 @@
                         <h3>Chocolate Fudge Cake</h3>
                         <p>Rich chocolate layers with premium fudge frosting and decorative chocolate shavings</p>
                         <div class="menu-card-price">KSh 2,500</div>
-                        <a href="https://wa.me/254704939844?text=I'd like to order a Chocolate Fudge Cake (KSh 2,500)" class="order-btn">
+                        <a href="#" onclick="window.open('https://wa.me/254704939844?text=' + generateOrderMessage('Chocolate Fudge Cake', 'KSh 2,500'), '_blank'); return false;" class="order-btn">
                             <i class="fab fa-whatsapp"></i> Order Now
                         </a>
                     </div>
@@ -86,7 +86,7 @@
                         <h3>Red Velvet Cake</h3>
                         <p>Classic red velvet with smooth cream cheese frosting and elegant presentation</p>
                         <div class="menu-card-price">KSh 2,800</div>
-                        <a href="https://wa.me/254704939844?text=I'd like to order a Red Velvet Cake (KSh 2,800)" class="order-btn">
+                        <a href="#" onclick="window.open('https://wa.me/254704939844?text=' + generateOrderMessage('Red Velvet Cake', 'KSh 2,800'), '_blank'); return false;" class="order-btn">
                             <i class="fab fa-whatsapp"></i> Order Now
                         </a>
                     </div>
@@ -101,7 +101,7 @@
                         <h3>Vanilla Sponge Cake</h3>
                         <p>Light and fluffy vanilla cake with rich buttercream and delicate decorations</p>
                         <div class="menu-card-price">KSh 2,200</div>
-                        <a href="https://wa.me/254704939844?text=I'd like to order a Vanilla Sponge Cake (KSh 2,200)" class="order-btn">
+                        <a href="#" onclick="window.open('https://wa.me/254704939844?text=' + generateOrderMessage('Vanilla Sponge Cake', 'KSh 2,200'), '_blank'); return false;" class="order-btn">
                             <i class="fab fa-whatsapp"></i> Order Now
                         </a>
                     </div>
@@ -147,7 +147,7 @@
                         <h3>Fresh Croissants</h3>
                         <p>Buttery, flaky pastries baked fresh daily - plain, chocolate, or almond varieties</p>
                         <div class="menu-card-price">KSh 150 each</div>
-                        <a href="https://wa.me/254704939844?text=I'd like to order Fresh Croissants (KSh 150 each)" class="order-btn">
+                        <a href="#" onclick="window.open('https://wa.me/254704939844?text=' + generateOrderMessage('Fresh Croissants', 'KSh 150 each'), '_blank'); return false;" class="order-btn">
                             <i class="fab fa-whatsapp"></i> Order Now
                         </a>
                     </div>
@@ -223,7 +223,7 @@
                         <h3>Gourmet Cupcakes</h3>
                         <p>Premium cupcakes with artistic buttercream frosting in various flavors</p>
                         <div class="menu-card-price">KSh 250 each</div>
-                        <a href="https://wa.me/254704939844?text=I'd like to order Gourmet Cupcakes (KSh 250 each)" class="order-btn">
+                        <a href="#" onclick="window.open('https://wa.me/254704939844?text=' + generateOrderMessage('Gourmet Cupcakes', 'KSh 250 each'), '_blank'); return false;" class="order-btn">
                             <i class="fab fa-whatsapp"></i> Order Now
                         </a>
                     </div>
@@ -345,7 +345,7 @@
                         <h3>Wedding Cakes</h3>
                         <p>Elegant multi-tier custom designed cakes for your perfect day</p>
                         <div class="menu-card-price">From KSh 400/serving</div>
-                        <a href="https://wa.me/254704939844?text=I'd like to inquire about Wedding Cakes (From KSh 400/serving)" class="order-btn">
+                        <a href="#" onclick="sendQuickReply('custom_design')" class="order-btn">
                             <i class="fab fa-whatsapp"></i> Inquire Now
                         </a>
                     </div>
