Completed WhatsApp order button updates with detailed messaging
- Updated all remaining order buttons in menu.html to use generateOrderMessage function
- All product order buttons now generate detailed, structured WhatsApp messages including:
  • Product name and price
  • Quantity requirements
  • Special requirements section
  • Delivery details and timeline
  • Customer contact information form
  • Professional formatting with emojis and clear sections
- Custom design items (Wedding, Birthday, Corporate cakes) now use custom_design template
- Party Platters use detailed order message for bulk orders
- All order interactions now provide comprehensive information gathering for better customer service

--- a/index.html
+++ b/index.html
@@ -510,9 +510,10 @@
                 </div>
             </div>
             <div class="chat-footer">
-                <a href="https://wa.me/254704939844?text=👋 Hello Sweet n' Puffy!%0A%0AI'm interested in your bakery services and found your website. I'd like to learn more about:%0A%0A🍰 Your available cakes and pastries%0A💰 Pricing and packages%0A📅 Ordering process and lead times%0A🚚 Delivery options to my area%0A%0ACould you please help me with information about your services? Thank you! 🙏" class="chat-whatsapp-btn">
-                    <i class="fab fa-whatsapp"></i>
-                    Continue on WhatsApp
+                <a href="https://wa.me/254704939844?text=👋 Hello Sweet n' Puffy!%0A%0AI'm interested in your bakery services and found your website. I'd like to learn more about:%0A%0A🍰 Your available cakes and pastries%0A💰 Pricing and packages%0A📅 Ordering process and lead times%0A🚚 Delivery options to my area%0A%0ACould you please help me with information about your services? Thank you! 🙏"
+                    class="chat-whatsapp-btn"></a>
+                <i class="fab fa-whatsapp"></i>
+                Continue on WhatsApp
                 </a>
             </div>
         </div>
