--- a/menu.html
+++ b/menu.html
@@ -116,7 +116,7 @@
                         <h3>Carrot Cake</h3>
                         <p>Moist carrot cake with cream cheese frosting, walnuts, and cinnamon spice</p>
                         <div class="menu-card-price">KSh 2,600</div>
-                        <a href="https://wa.me/254704939844?text=I'd like to order a Carrot Cake (KSh 2,600)" class="order-btn">
+                        <a href="#" onclick="window.open('https://wa.me/254704939844?text=' + generateOrderMessage('Carrot Cake', 'KSh 2,600'), '_blank'); return false;" class="order-btn">
                             <i class="fab fa-whatsapp"></i> Order Now
                         </a>
                     </div>
@@ -131,7 +131,7 @@
                         <h3>Black Forest Cake</h3>
                         <p>Decadent chocolate cake with cherries, whipped cream, and chocolate shavings</p>
                         <div class="menu-card-price">KSh 3,200</div>
-                        <a href="https://wa.me/254704939844?text=I'd like to order a Black Forest Cake (KSh 3,200)" class="order-btn">
+                        <a href="#" onclick="window.open('https://wa.me/254704939844?text=' + generateOrderMessage('Black Forest Cake', 'KSh 3,200'), '_blank'); return false;" class="order-btn">
                             <i class="fab fa-whatsapp"></i> Order Now
                         </a>
                     </div>
@@ -162,7 +162,7 @@
                         <h3>Danish Pastries</h3>
                         <p>European-style fruit-filled delicate pastries with traditional techniques</p>
                         <div class="menu-card-price">KSh 200 each</div>
-                        <a href="https://wa.me/254704939844?text=I'd like to order Danish Pastries (KSh 200 each)" class="order-btn">
+                        <a href="#" onclick="window.open('https://wa.me/254704939844?text=' + generateOrderMessage('Danish Pastries', 'KSh 200 each'), '_blank'); return false;" class="order-btn">
                             <i class="fab fa-whatsapp"></i> Order Now
                         </a>
                     </div>
@@ -177,7 +177,7 @@
                         <h3>Meat Pies</h3>
                         <p>Golden pastries filled with perfectly seasoned minced meat and spices</p>
                         <div class="menu-card-price">KSh 120 each</div>
-                        <a href="https://wa.me/254704939844?text=I'd like to order Meat Pies (KSh 120 each)" class="order-btn">
+                        <a href="#" onclick="window.open('https://wa.me/254704939844?text=' + generateOrderMessage('Meat Pies', 'KSh 120 each'), '_blank'); return false;" class="order-btn">
                             <i class="fab fa-whatsapp"></i> Order Now
                         </a>
                     </div>
@@ -192,7 +192,7 @@
                         <h3>Sausage Rolls</h3>
                         <p>Flaky golden pastry wrapped around premium seasoned sausage</p>
                         <div class="menu-card-price">KSh 100 each</div>
-                        <a href="https://wa.me/254704939844?text=I'd like to order Sausage Rolls (KSh 100 each)" class="order-btn">
+                        <a href="#" onclick="window.open('https://wa.me/254704939844?text=' + generateOrderMessage('Sausage Rolls', 'KSh 100 each'), '_blank'); return false;" class="order-btn">
                             <i class="fab fa-whatsapp"></i> Order Now
                         </a>
                     </div>
@@ -207,7 +207,7 @@
                         <h3>Samosas</h3>
                         <p>Crispy triangular pastries with spiced vegetable or meat filling</p>
                         <div class="menu-card-price">KSh 80 each</div>
-                        <a href="https://wa.me/254704939844?text=I'd like to order Samosas (KSh 80 each)" class="order-btn">
+                        <a href="#" onclick="window.open('https://wa.me/254704939844?text=' + generateOrderMessage('Samosas', 'KSh 80 each'), '_blank'); return false;" class="order-btn">
                             <i class="fab fa-whatsapp"></i> Order Now
                         </a>
                     </div>
@@ -238,7 +238,7 @@
                         <h3>Fresh Muffins</h3>
                         <p>Daily baked muffins in blueberry, chocolate chip, banana, and bran varieties</p>
                         <div class="menu-card-price">KSh 180 each</div>
-                        <a href="https://wa.me/254704939844?text=I'd like to order Fresh Muffins (KSh 180 each)" class="order-btn">
+                        <a href="#" onclick="window.open('https://wa.me/254704939844?text=' + generateOrderMessage('Fresh Muffins', 'KSh 180 each'), '_blank'); return false;" class="order-btn">
                             <i class="fab fa-whatsapp"></i> Order Now
                         </a>
                     </div>
@@ -253,7 +253,7 @@
                         <h3>Artisan Doughnuts</h3>
                         <p>Handcrafted doughnuts with glazed, filled, and specialty varieties</p>
                         <div class="menu-card-price">KSh 120 each</div>
-                        <a href="https://wa.me/254704939844?text=I'd like to order Artisan Doughnuts (KSh 120 each)" class="order-btn">
+                        <a href="#" onclick="window.open('https://wa.me/254704939844?text=' + generateOrderMessage('Artisan Doughnuts', 'KSh 120 each'), '_blank'); return false;" class="order-btn">
                             <i class="fab fa-whatsapp"></i> Order Now
                         </a>
                     </div>
@@ -268,7 +268,7 @@
                         <h3>Fresh Cookies</h3>
                         <p>Homemade cookies in chocolate chip, oatmeal raisin, and sugar varieties</p>
                         <div class="menu-card-price">KSh 80 each</div>
-                        <a href="https://wa.me/254704939844?text=I'd like to order Fresh Cookies (KSh 80 each)" class="order-btn">
+                        <a href="#" onclick="window.open('https://wa.me/254704939844?text=' + generateOrderMessage('Fresh Cookies', 'KSh 80 each'), '_blank'); return false;" class="order-btn">
                             <i class="fab fa-whatsapp"></i> Order Now
                         </a>
                     </div>
@@ -284,7 +284,7 @@
                         <h3>White Bread</h3>
                         <p>Fresh baked daily, soft and fluffy with perfect texture</p>
                         <div class="menu-card-price">KSh 60 per loaf</div>
-                        <a href="https://wa.me/254704939844?text=I'd like to order White Bread (KSh 60 per loaf)" class="order-btn">
+                        <a href="#" onclick="window.open('https://wa.me/254704939844?text=' + generateOrderMessage('White Bread', 'KSh 60 per loaf'), '_blank'); return false;" class="order-btn">
                             <i class="fab fa-whatsapp"></i> Order Now
                         </a>
                     </div>
@@ -299,7 +299,7 @@
                         <h3>Brown Bread</h3>
                         <p>Wholesome whole wheat bread packed with nutrients and fiber</p>
                         <div class="menu-card-price">KSh 80 per loaf</div>
-                        <a href="https://wa.me/254704939844?text=I'd like to order Brown Bread (KSh 80 per loaf)" class="order-btn">
+                        <a href="#" onclick="window.open('https://wa.me/254704939844?text=' + generateOrderMessage('Brown Bread', 'KSh 80 per loaf'), '_blank'); return false;" class="order-btn">
                             <i class="fab fa-whatsapp"></i> Order Now
                         </a>
                     </div>
@@ -314,7 +314,7 @@
                         <h3>Dinner Rolls</h3>
                         <p>Soft, buttery rolls perfect for meals and special occasions</p>
                         <div class="menu-card-price">KSh 30 each</div>
-                        <a href="https://wa.me/254704939844?text=I'd like to order Dinner Rolls (KSh 30 each)" class="order-btn">
+                        <a href="#" onclick="window.open('https://wa.me/254704939844?text=' + generateOrderMessage('Dinner Rolls', 'KSh 30 each'), '_blank'); return false;" class="order-btn">
                             <i class="fab fa-whatsapp"></i> Order Now
                         </a>
                     </div>
@@ -329,7 +329,7 @@
                         <h3>French Baguettes</h3>
                         <p>Crispy authentic French-style bread with perfect crust</p>
                         <div class="menu-card-price">KSh 150 each</div>
-                        <a href="https://wa.me/254704939844?text=I'd like to order French Baguettes (KSh 150 each)" class="order-btn">
+                        <a href="#" onclick="window.open('https://wa.me/254704939844?text=' + generateOrderMessage('French Baguettes', 'KSh 150 each'), '_blank'); return false;" class="order-btn">
                             <i class="fab fa-whatsapp"></i> Order Now
                         </a>
                     </div>
@@ -360,7 +360,7 @@
                         <h3>Birthday Cakes</h3>
                         <p>Custom birthday cakes with personalized decorations and themes</p>
                         <div class="menu-card-price">From KSh 2,000</div>
-                        <a href="https://wa.me/254704939844?text=I'd like to order a Birthday Cake (From KSh 2,000)" class="order-btn">
+                        <a href="#" onclick="sendQuickReply('custom_design')" class="order-btn">
                             <i class="fab fa-whatsapp"></i> Order Now
                         </a>
                     </div>
@@ -375,7 +375,7 @@
                         <h3>Corporate Cakes</h3>
                         <p>Professional cakes for corporate events, milestones, and celebrations</p>
                         <div class="menu-card-price">From KSh 3,500</div>
-                        <a href="https://wa.me/254704939844?text=I'd like to order a Corporate Cake (From KSh 3,500)" class="order-btn">
+                        <a href="#" onclick="sendQuickReply('custom_design')" class="order-btn">
                             <i class="fab fa-whatsapp"></i> Order Now
                         </a>
                     </div>
@@ -390,7 +390,7 @@
                         <h3>Party Platters</h3>
                         <p>Assorted pastries and treats perfect for events (serves 20-30 people)</p>
                         <div class="menu-card-price">From KSh 4,000</div>
-                        <a href="https://wa.me/254704939844?text=I'd like to order Party Platters (From KSh 4,000)" class="order-btn">
+                        <a href="#" onclick="window.open('https://wa.me/254704939844?text=' + generateOrderMessage('Party Platters', 'From KSh 4,000'), '_blank'); return false;" class="order-btn">
                             <i class="fab fa-whatsapp"></i> Order Now
                         </a>
                     </div>
