Removed Vercel Analytics, focusing on Google Analytics only
- Deleted vercel.json configuration file
- Removed Vercel Analytics scripts from all HTML pages
- Updated ANALYTICS_SETUP.md to focus on Google Analytics
- Enhanced Google Analytics with debug mode and console logging
- Added comprehensive event tracking for better insights
- Streamlined analytics setup for easier management

--- a/gallery.html
+++ b/gallery.html
@@ -18,11 +18,13 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'G-9JJPBKHCL0');
+        gtag('config', 'G-9JJPBKHCL0', {
+            send_page_view: true
+        });
+        console.log('Google Analytics loaded on Gallery page');
     </script>
     
-    <!-- Vercel Analytics -->
-    <script defer src="/_vercel/insights/script.js"></script>
+
 </head>
 
 <body>
