--- a/menu.html
+++ b/menu.html
@@ -15,11 +15,13 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'G-9JJPBKHCL0');
+        gtag('config', 'G-9JJPBKHCL0', {
+            send_page_view: true
+        });
+        console.log('Google Analytics loaded on Menu page');
     </script>
     
-    <!-- Vercel Analytics -->
-    <script defer src="/_vercel/insights/script.js"></script>
+
 </head>
 <body>
     <!-- Scroll Progress Bar -->
