Fix WhatsApp widget and add script.js functionality

--- a/index.html
+++ b/index.html
@@ -34,8 +34,6 @@
             custom_parameter: 'bakery_website'
         });
     </script>
-
-
 </head>
 
 <body>
@@ -401,7 +399,7 @@
                     </div>
                 </div>
                 <div class="contact-form">
-                    <form id="orderForm">
+                    <form id="contactForm">
                         <h3>Place Your Order</h3>
                         <div class="form-group">
                             <input type="text" id="name" name="name" placeholder="Your Name" required>
@@ -535,9 +533,9 @@
             </div>
             <div class="chat-footer">
                 <a href="https://wa.me/254704939844?text=👋 Hello Sweet n' Puffy!%0A%0AI'm interested in your bakery services and found your website. I'd like to learn more about:%0A%0A🍰 Your available cakes and pastries%0A💰 Pricing and packages%0A📅 Ordering process and lead times%0A🚚 Delivery options to my area%0A%0ACould you please help me with information about your services? Thank you! 🙏"
-                    class="chat-whatsapp-btn"></a>
-                <i class="fab fa-whatsapp"></i>
-                Continue on WhatsApp
+                    class="chat-whatsapp-btn">
+                    <i class="fab fa-whatsapp"></i>
+                    Continue on WhatsApp
                 </a>
             </div>
         </div>
@@ -546,66 +544,6 @@
     <!-- Scroll Progress Bar -->
     <div class="scroll-progress">
         <div class="progress-bar" id="progressBar"></div>
-    </div>
-
-    <!-- Order Form Modal -->
-    <div id="orderModal" class="order-modal">
-        <div class="order-modal-content">
-            <div class="order-modal-header">
-                <h3 id="modalTitle">Order Details</h3>
-                <button class="order-modal-close" onclick="closeOrderModal()">&times;</button>
-            </div>
-            <div class="order-modal-body">
-                <form id="orderForm">
-                    <div class="form-group">
-                        <label for="customerName">Your Name *</label>
-                        <input type="text" id="customerName" name="customerName" required>
-                    </div>
-
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label for="customerPhone">Phone Number *</label>
-                            <input type="tel" id="customerPhone" name="customerPhone" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="orderQuantity">Quantity *</label>
-                            <input type="number" id="orderQuantity" name="orderQuantity" min="1" required>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="eventDate">When do you need it? *</label>
-                        <input type="date" id="eventDate" name="eventDate" required>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="deliveryOption">Pickup or Delivery? *</label>
-                        <select id="deliveryOption" name="deliveryOption" required>
-                            <option value="">Select option</option>
-                            <option value="pickup">Pickup from Kenyatta Road, Juja</option>
-                            <option value="delivery">Delivery to my location</option>
-                        </select>
-                    </div>
-
-                    <div class="form-group" id="deliveryLocationGroup" style="display: none;">
-                        <label for="deliveryLocation">Delivery Location</label>
-                        <input type="text" id="deliveryLocation" name="deliveryLocation"
-                            placeholder="Enter your address">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="specialRequests">Special Requirements (Optional)</label>
-                        <textarea id="specialRequests" name="specialRequests"
-                            placeholder="Any customizations, dietary restrictions, or special requests..."></textarea>
-                    </div>
-
-                    <button type="submit" class="order-submit-btn">
-                        <i class="fab fa-whatsapp"></i>
-                        Send Order via WhatsApp
-                    </button>
-                </form>
-            </div>
-        </div>
     </div>
 
     <!-- Scripts -->
